--- a/day3.html
+++ b/day3.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>this is third day</h1>
-    let keyword:-its cannot accessed before declared and initialised.
-    note :- var keyword avariable,if we try to assecc them for assigning value to the will
-    
+<h1>let keyword:-</h1>its cannot accessed before declared and initialised.<br><br>
+
+<h1>not defined -</h1> Any variable which we try to access but not declared will throw us a reference Error: variable not defined<br><br>
+
+
+<h1>undefined - </h1>If a variable is declared but not assigned any value yet, but if we try to access that variable then we will get the errror as undefined.<br>
+
    <script src="day3.js" ></script>
 </body>
 </html>
